Calendar fix